<resources>
    <!--  Titles  -->
    <string name="app_name">Project Inlook</string>
    <string name="title_views">Views</string>
    <string name="title_today">Today</string>
    <string name="title_day">Day</string>
    <string name="title_week">Week</string>
    <string name="title_month">Month</string>

    <!--  Buttons   -->
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_edit_button">Edit</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>

    <string name="week_previous_button">Previous</string>
    <string name="week_current_button">Today</string>
    <string name="week_next_button">Next</string>

    <string name="weekly_event_date_title">Date</string>
    <string name="weekly_event_desc_title">Details</string>

    <string name="excess_events">+%1$d Events</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings -->
    <string name="first_day_title">First day of the week</string>
    <string name="localities_header">Locality</string>
    <string name="theme_header">Theme</string>
    <string name="interface_header">Interface</string>
    <string name="hour_format_title">Hour Format</string>
    <string name="default_view_title">Default View</string>

    <string name="clock_time_format">12Hr (AM/PM)</string>
    <string name="day_time_format">24 Hr</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="local_default">Local default</string>

    <!--  Add Event  -->
    <string name="today_button">Today Button</string>
    <string name="add_event">Add an event</string>
    <string name="title_text">Title</string>
    <string name="save_button">Save</string>
    <string name="description_hint">Enter description…</string>
    <string name="add_arrow">Arrow pointing to end date</string>

    <!--  Day names  -->
    <string name="example_day">Day</string>
    <string name="example_text">Example Text</string>
    <string name="example_time">12:00 AM</string>
    <string name="example_time_short">12 PM</string>
    <string name="example_date_number">1</string>
    <string name="dialog_confirm_delete_event">Delete event?</string>
    <string name="today_nothing_planned">Nothing planned for today!</string>

</resources>