<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/views_item"
        android:title="@string/title_views">
        <menu>
            <item
                android:id="@+id/navigation_item_today"
                android:icon="@drawable/ic_list_24"
                android:title="@string/title_today"
                android:checkable="true"/>
            <item
                android:id="@+id/navigation_item_day"
                android:icon="@drawable/ic_calendar_view_day_24"
                android:title="@string/title_day"
                android:checkable="true"/>
            <item
                android:id="@+id/navigation_item_week"
                android:icon="@drawable/ic_calendar_view_week_24"
                android:title="@string/title_week"
                android:checkable="true"/>
            <item
                android:id="@+id/navigation_item_month"
                android:icon="@drawable/ic_calendar_view_month_24"
                android:title="@string/title_month"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/settings_item"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/navigation_item_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_settings_24"
                android:checkable="false"/>
        </menu>
    </item>
</menu>