<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/localities_header">

        <ListPreference
            app:defaultValue="clock_time_format"
            app:entries="@array/hour_format_entries"
            app:entryValues="@array/hour_format_values"
            app:key="hour_format"
            app:title="@string/hour_format_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/interface_header">
        <ListPreference
            app:defaultValue="view_start_destination"
            app:entries="@array/view_start_destination_entries"
            app:entryValues="@array/view_start_destination_values"
            app:key="start_destination"
            app:title="@string/default_view_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>