<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.BottomSheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/bottom_delete_confirmation_message"
                app:layout_constraintBottom_toTopOf="@+id/btn_delete"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/dialog_confirm_delete_event"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_center"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dialog_cancel_button" />

            <TextView
                android:id="@+id/btn_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_vertical_center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dialog_delete_button"
                android:textColor="?attr/colorError" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_center"
                app:layout_constraintGuide_percent="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


