<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditEventActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_TitleTextLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/edit_ArrowImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_TitleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/title_text"
            android:inputType="text"
            android:maxLength="48"
            android:scrollbars="vertical"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_EndTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_rounded_corners_medium"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/example_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/edit_EndDateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_ArrowImageView"
        app:layout_constraintTop_toBottomOf="@id/edit_TitleTextLayout" />

    <TextView
        android:id="@+id/edit_EndDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_rounded_corners_medium"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:clickable="true"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/example_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/edit_descriptionTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_ArrowImageView"
        app:layout_constraintTop_toBottomOf="@id/edit_EndTimeTextView" />

    <TextView
        android:id="@+id/edit_StartTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_rounded_corners_medium"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/example_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/edit_StartDateTextView"
        app:layout_constraintEnd_toStartOf="@id/edit_ArrowImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_TitleTextLayout" />

    <TextView
        android:id="@+id/edit_StartDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_rounded_corners_medium"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:clickable="true"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/example_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/edit_descriptionTextLayout"
        app:layout_constraintEnd_toStartOf="@id/edit_ArrowImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_StartTimeTextView" />

    <ImageView
        android:id="@+id/edit_ArrowImageView"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_arrow"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/edit_descriptionTextLayout"
        app:layout_constraintEnd_toStartOf="@id/edit_EndDateTextView"
        app:layout_constraintStart_toEndOf="@id/edit_StartDateTextView"
        app:layout_constraintTop_toBottomOf="@id/edit_TitleTextLayout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_descriptionTextLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/edit_HSLColorPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_EndDateTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:inputType="text|textMultiLine"
            android:maxLength="256"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.madrapps.pikolo.HSLColorPicker
        android:id="@+id/edit_HSLColorPicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/edit_ButtonsLayout"
        app:layout_constraintEnd_toStartOf="@id/edit_EventPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_descriptionTextLayout" />

    <TextView
        android:id="@+id/edit_EventPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/background_for_event"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:ellipsize="end"
        android:gravity="center|start"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_ButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_HSLColorPicker"
        app:layout_constraintTop_toBottomOf="@id/edit_descriptionTextLayout" />

    <LinearLayout
        android:id="@+id/edit_ButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_HSLColorPicker">

        <Button
            android:id="@+id/edit_btnCancel"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/edit_btnDelete"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorError"
            android:text="@string/dialog_delete_button"
            android:textColor="?attr/colorOnError" />

        <Button
            android:id="@+id/edit_btnSave"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>